# SeoulInfoCollect

./: .gitignore  pyproject.toml
seoulculturecollect/: __init__.py  collect_console.py  stock_collect_console.py
seoulculturecollect/resource/: area_code.json
