[tool.poetry]
name = "seoulculturecollect"
version = "0.1.0"
description = ""
authors = ["shkim <skok1025@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
xmltodict = "^0.13.0"
click = "^8.1.7"
beautifulsoup4 = "^4.12.3"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
